from  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y: Add parsing of optional `name:' before a rule member.
	* monoburg.h,
	* monoburg.c: Add optional rule naming.

2005-06-14  Roland Levillain  <roland@lrde.epita.fr>

	* configure.ac: Bump to 1.0.1a.

2005-06-14  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c: Add a `--quiet' option to disable warning messages.

2005-06-13  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c:   Remove   useless   definitions  of   `g_new0'  and
	`g_warning'.  As they're  not used in the output  code, there's no
	reason to define them.

2005-06-13  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c: Display usage message on the standard output and be less
	verbose on bad options.

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c: Make the `usage' message more verbose.

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c: Add a `-n' option to precise the top #define used in
	the generated header.

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y,
	* monoburg.c,
	* monoburg.h: Rename "warn_cpp" function to "warn_cxx".

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c: Output MB_TERM* and MB_NTERM* in enums `MBTerms' and
	`MBNTerms'.

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y: Do not output "#line" directives when reading rules.

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y: Search through `include_dirs' paths for file to include.
	* monoburg.h,
	* monoburg.c: Add a `-I' option to precise include directories.

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y: Add `#line' directives output on `%include', CODE and
	in `yyparsetail'.
	* monoburg.c: Add `#line' directives output just before the call to
	`yyparse'.
